Final commit for budget app.

--- a/index.html
+++ b/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
     <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0" >
 <meta http-equiv="X-UA-Compatible", content="ie=edge">
-<title>Document</title>
+<link rel = 'stylesheet' href = '16 style.css'>
+<title>JavaScript</title>
     </head>
-    <body>
+    <body> JS
+        <div class = 'box' id = 'box'></div>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>4</button>
+        <button>5</button>
+
+        <div class = 'circle'></div>
+        <div class = 'circle'></div>
+        <div class = 'circle'></div>
+
+        <div class="wrapper">
+            <div class = 'heart'></div>
+            <div class = 'heart'></div>
+            <div class = 'heart'></div>
+        </div>
+
 
      <script src="script.js">   
      </script>   
     </body>
 </html>
-<p>
-    U can learn JS with our service.
-</p>    <!-- U cn learn JS  -->
-<input value="HELLO W@RLD">
-<a href="https://www.google.com/">
-    Прямая ссылка на гугл
-</a>
 
-
-<ol>
-    <li class='table1'>Learn JS</li>
-    <li class='table2'>Learn HTML</li>
-    <li class='table3'>Learn CSS</li>
-
-</ol>
-
-<style>
+<style> CSS
     .table1 {
         color: lawngreen;
         padding: 5px;
@@ -52,3 +55,4 @@
         font-size: 15px;
     }
 </style>
+
